--- a/27 - Click and Drag/style.css
+++ b/27 - Click and Drag/style.css
@@ -56,15 +56,15 @@ body {
   box-shadow: inset 0 0 0 10px rgba(0,0,0,0.15);
 }
 
-.item:nth-child(9n+1) { background: dodgerblue;}
-.item:nth-child(9n+2) { background: goldenrod;}
-.item:nth-child(9n+3) { background: paleturquoise;}
-.item:nth-child(9n+4) { background: gold;}
-.item:nth-child(9n+5) { background: cadetblue;}
-.item:nth-child(9n+6) { background: tomato;}
-.item:nth-child(9n+7) { background: lightcoral;}
-.item:nth-child(9n+8) { background: darkslateblue;}
-.item:nth-child(9n+9) { background: rebeccapurple;}
+.item:nth-child(9n+1) { background: url('https://source.unsplash.com/dG9fUG0Jpos/600x900');}
+.item:nth-child(9n+2) { background: url('https://source.unsplash.com/Xkuj7QuHj-I/600x900');}
+.item:nth-child(9n+3) { background: url('https://source.unsplash.com/Oz2ZQ2j8We8/600x900');}
+.item:nth-child(9n+4) { background: url('https://source.unsplash.com/N7oCVnnhgCA/600x900');}
+.item:nth-child(9n+5) { background: url('https://source.unsplash.com/fdYWSfH8N6Y/600x900');}
+.item:nth-child(9n+6) { background: url('https://source.unsplash.com/r_oV6smBBYk/600x900');}
+.item:nth-child(9n+7) { background: url('https://source.unsplash.com/MEzqoN8p6C0/600x900');}
+.item:nth-child(9n+8) { background: url('https://source.unsplash.com/Xaanw0s0pMk/600x900');}
+.item:nth-child(9n+9) { background: url('https://source.unsplash.com/9IBqihqhuHc/600x900');}
 
 .item:nth-child(even) { transform: scaleX(1.31) rotateY(40deg); }
 .item:nth-child(odd) { transform: scaleX(1.31) rotateY(-40deg); }
